--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.demo.HelloController">
-
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Label alignment="CENTER" layoutX="299.0" layoutY="32.0" prefHeight="45.0" prefWidth="202.0" style="-fx-background-color: #0cebe3a4;" text="OopGram" textFill="#f20a0afd" AnchorPane.topAnchor="32.0">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+         <font>
+            <Font size="33.0" />
+         </font>
+      </Label>
+      <Button layoutX="31.0" layoutY="174.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="240.0" text="REGISTER" AnchorPane.leftAnchor="31.0">
+         <font>
+            <Font name="System Italic" size="29.0" />
+         </font>
+      </Button>
+      <Button layoutX="533.0" layoutY="174.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="240.0" text="LOGIN" AnchorPane.rightAnchor="27.0">
+         <font>
+            <Font name="System Italic" size="26.0" />
+         </font>
+      </Button>
+      <Button layoutX="320.0" layoutY="416.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="160.0" text="EXIT" AnchorPane.bottomAnchor="46.0">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Button>
+   </children>
+</AnchorPane>
