--- a/src/main/resources/com/example/demo/RegisterPage.fxml
+++ b/src/main/resources/com/example/demo/RegisterPage.fxml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.demo.RegisterPage"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane id="dark-blue" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../../java/com/example/demo/Buttons.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.RegisterPage">
+<children>
+   <TextField fx:id="IDText" layoutX="284.0" layoutY="132.0" prefHeight="46.0" prefWidth="231.0" promptText="ID" />
+   <TextField fx:id="UserNameText" layoutX="284.0" layoutY="199.0" prefHeight="46.0" prefWidth="231.0" promptText="User Name" />
+   <Label id="iphone" alignment="CENTER" layoutX="205.0" layoutY="15.0" prefHeight="97.0" prefWidth="389.0" stylesheets="@../../../../java/com/example/demo/Buttons.css" text="PLease fill the blanks.">
+      <font>
+         <Font name="System Bold" size="35.0" />
+      </font>
+   </Label>
+   <Button id="record-sales" fx:id="ReturnButton" layoutX="33.0" layoutY="514.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="142.0" stylesheets="@../../../../java/com/example/demo/Buttons.css" text="RETURN" />
+   <Button id="record-sales" fx:id="RegisterButton" layoutX="585.0" layoutY="514.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="142.0" stylesheets="@../../../../java/com/example/demo/Buttons.css" text="REGISTER" />
+   <Label text="Label" />
+   <Label id="iphone" fx:id="BusinessText" alignment="CENTER" layoutX="174.0" layoutY="323.0" prefHeight="62.0" prefWidth="452.0" text="Is this a business account?(yes/no)" />
+   <TextField fx:id="businessText" layoutX="284.0" layoutY="409.0" prefHeight="46.0" prefWidth="231.0" promptText="yes">
+      <font>
+         <Font size="20.0" />
+      </font>
+   </TextField>
+      <PasswordField fx:id="PassText" layoutX="284.0" layoutY="265.0" prefHeight="46.0" prefWidth="231.0" promptText="Password" />
+</children>
 </AnchorPane>
